@@ -1,3 +1,5 @@
+* Avoid checking for strict booleans on control elements, they are actually strings if set in the source HTML as attribute values. [Diego Perini]
+
 * Reduce code in normalize() and make forEachCall() use `++i` and replace repeated string in compileSelector() with `strEdgeSpace`. [jddalton]
 
 * Ensure escaped commas are not parsed and simplify the `reSplitGroup` and `reSplitToken` regexps. [jddalton]
